# Resnets

./: .gitignore  Resnets.org  main.py  pyproject.toml  resnet_summary.txt
src/resnets/blocks/: ResNet.py  ResidualBlock.py  myResNet.py
src/resnets/inference/: inference.py
src/resnets/training/: TrainingSettings.py  runNEpochs.py  runOneEpoch.py  train.py
