[project]
name = "resnets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "mlflow>=3.2.0",
    "numpy>=2.3.1",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "print-pretty-tree>=0.0.3",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
