[project]
name = "resnets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "metaflow>=2.19.3",
    "numpy>=2.3.1",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "ray[tune]>=2.49.1",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.1",
    "torchvision>=0.23.0",
    "wandb>=0.21.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.2.0",
    "kubernetes>=33.1.0",
    "matplotlib>=3.10.5",
    "metaflow>=2.18.2",
    "print-pretty-tree>=0.0.3",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
